# HPCI-mock-ICON

./: README.md
icon-model/: .clang-format  .cmake-format.py  .fprettify.rc  .pre-commit-config.yaml  AUTHORS.TXT  Makefile.in  RELEASE_NOTES.md  REUSE.toml  collect.extra-libs.in  configure  configure.ac  depgen.c.config.in  depgen.f90.config.in  deplist.config.in  icon.mk.in  inlib.mk.in  make_runscripts
icon-model/config/bsc/: mn5.cpu.intel-2023.0.0  mn5.cpu.intel-openmpi-2023.0.0  mn5.cpu.nvhpc-24.5  mn5.gpu.nvhpc-23.11  mn5.gpu.nvhpc-24.5
icon-model/config/buildbot/: balfrin_cpu_nvidia  balfrin_cpu_nvidia_mixed  balfrin_gpu_nvidia  balfrin_gpu_nvidia_mixed  booster_nvhpc_ompi  booster_nvhpc_psmpi  breeze_gcc  breeze_gcc_openmp  breeze_intel  breeze_intel_openmp  breeze_nag  buildModel  buildModel.sbatch  cluster_intel_psmpi  cluster_nvhpc_psmpi  dwd_fcns.sh  dwd_nec_coupling  dwd_nec_sp  horeka_cpu_nvhpc  horeka_gcc  horeka_gpu_nvhpc  horeka_intel  levante_aurora  levante_coverage  levante_cpu_nvhpc  levante_cpu_nvhpc_dev  levante_gcc  levante_gcc_hybrid  levante_gcc_sp  levante_gpu_nvhpc  levante_gpu_nvhpc_dev  levante_gpu_nvhpc_sp  levante_gpu_validation  levante_intel  levante_intel_hybrid  levante_intel_hybrid_mixed  levante_intel_hybrid_sp  levante_intel_pio  levante_nag  levante_nag_serial  (+9 more)
icon-model/config/cineca/: leo.common.nvhpc-23.1  leo.cpu.nvhpc-23.1  leo.gpu.nvhpc-23.1
icon-model/config/csc/: exec.lumi.container.cce-16.0.1.1  lumi.cpu.container.cce-16.0.1.1  lumi.cpu.native.cce-16.0.1  lumi.cpu.native.cce-17.0.1  lumi.gpu.container.cce-16.0.1.1  lumi.gpu.container.cce-18.0.1  lumi.gpu.native.cce-16.0.1  lumi.gpu.native.cce-17.0.1  lumi.gpu.native.cce-17.0.1-debug
icon-model/config/cscs/: SANTIS_ENV_TAG  alps_mch.cpu.nvidia  alps_mch.cpu.nvidia_mixed  alps_mch.gpu.nvidia  alps_mch.gpu.nvidia_mixed  build_and_test_mch_prod  create_sh_env  santis.cpu.nvhpc  santis.gpu.nvhpc  spack_install
icon-model/config/dkrz/: aurora.VE.nfort-3.5.1_mpi-3.2.0  aurora.VE.nfort-4.0.0_mpi-3.2.0  aurora.VE.nfort-5.0.1_mpi-3.4.0  aurora.VH.gcc_mpi-3.2.0  aurora.VH.gcc_mpi-3.4.0  levante.cpu.nvhpc-24.11  levante.cpu.nvhpc-24.7  levante.cpu.nvhpc-24.9  levante.gcc-11.2.0  levante.gpu.nvhpc-24.11  levante.gpu.nvhpc-24.7  levante.gpu.nvhpc-24.9  levante.intel-2021.5.0  levante.intel-2021.5.0_mpi-4.1.5  levante.nag-7.1.7101
icon-model/config/dwd/: gpnl.cpu.nvidia-24.9  gpnl.gpu.nvidia-24.9  inlinelist.sh  linuxWS.cpu.nvidia-22.7  linuxWS.gcc  linuxWS.gpu.nvidia-22.7  rcl.VE.bb-dwd_nec_coupling  rcl.VE.bb-dwd_nec_hybrid  rcl.VE.bb-dwd_nec_oper  rcl.VE.bb-dwd_nec_sp  rcl.VE.nfort-5.1.0_mpi-3.5_oper  rcl.VE.nfort-5.1.0_mpi-3.5_oper_ftrace  rcl.VE.nfort-5.3.0_mpi-3.5_oper  rcl.VE.nfort-5.3.0_mpi-3.5_oper_ftrace  rcl.VH.bb-dwd_nec_coupling  rcl.VH.bb-dwd_nec_hybrid  rcl.VH.bb-dwd_nec_oper  rcl.VH.bb-dwd_nec_sp  rcl.VH.gcc-11.2.0_mpi-3.5_oper  rcl.VH.gcc-12.3.0_mpi-3.5_oper
icon-model/config/ecmwf/: atos2020.gcc-11.2.0  atos2020.intel-2021.4  atos2020.intel-2025.0
icon-model/config/generic/: gcc
icon-model/config/hlrs/: hawk.intel_21_mpt  hawk.intel_mpt_clm_optim  hunter.cpe_clm  module_switcher
icon-model/config/jsc/: jedi.cpu.ompi_nvhpc-24.3  jedi.cpu.psmpi_nvhpc-24.3  jedi.gpu.ompi_nvhpc-24.3  jedi.gpu.psmpi_nvhpc-24.3  jupiter_booster.cpu.ompi_nvhpc-25.5  jupiter_booster.cpu.psmpi_nvhpc-25.3  jupiter_booster.cpu.psmpi_nvhpc-25.5  (+9 more)
icon-model/data/: ECHAM6_CldOptProps_rrtmgp_lw.nc  ECHAM6_CldOptProps_rrtmgp_sw.nc  MACv2.0-SP_v1.nc  dmin_wetgrowth_graupelhail_cosmo5.nc  dmin_wetgrowth_graupelhail_cosmo7.nc  rrtmgp-cloud-optics-coeffs-lw.nc  rrtmgp-cloud-optics-coeffs-sw.nc  rrtmgp-gas-lw-g128.nc  rrtmgp-gas-sw-g112.nc  upatmo_gases_chemheat.nc
icon-model/etc/: aero_provider.py  o3_cmip_provider.py
icon-model/ragnarok/: CMakeLists.txt  README.md
icon-model/ragnarok/aes_thermodynamics/: CMakeLists.txt  thermo.hpp  thermo.ipp  thermo_constants.hpp  thermo_test.cpp
icon-model/ragnarok/cmake/caches/: levante_cpu.cmake  levante_gpu.cmake
icon-model/ragnarok/common/: CMakeLists.txt  physical_constants.hpp  types.hpp  types_test.cpp
icon-model/ragnarok/support/: CMakeLists.txt
icon-model/ragnarok/support/icon_bridge/: CMakeLists.txt  icon_bridge.cpp  icon_bridge.hpp  icon_domain.cpp  icon_exception.cpp  icon_exception.hpp  icon_f2c.cpp  icon_f2c.hpp  icon_sync.cpp  icon_sync.hpp  icon_sync.ipp  mo_ragnarok.f90  mo_ragnarok_f2c.f90  model_domain.cpp  model_domain.hpp  ragnarok.cpp  ragnarok.hpp
icon-model/ragnarok/support/testing/: CMakeLists.txt  tests_runner.cpp
icon-model/ragnarok/support/timer/: CMakeLists.txt  icon_timer.cpp  icon_timer.hpp  mo_ragnarok_timer.f90  rgk_timer.hpp  timer_test.cpp
icon-model/run/: Makefile  SETUP.config.in  add_START_MODEL_function  add_refgen_routines  add_required_atmo_hydrostatic_files  add_required_atmo_non-hydrostatic_files  add_required_ocean_files  add_run_routines  ana_varnames_map_file.txt  collect.set-up.info.in  create-hostfile.py  create_target_header  dict.echam_tpe.mpim  dict.extpar  dict.icoham.mpim  dict.icon.hdcp2  dict.iconam.mpim  dict.iconam.mpim_fuernwp  dict.latbc  dict.output.dwd  dict.output.mch  exec.iconrun  exp.aes_amip  exp.aes_amip_carbon  exp.aes_amip_pfts_test  exp.aes_amip_pfts_test_update_base  exp.aes_amip_test  exp.aes_aquaplanet_r02b04  exp.aes_bubble  exp.aes_bubble_land  exp.aes_bubble_land_test  exp.aes_bubble_land_tmx  exp.aes_bubble_test  exp.aes_bubble_tmx  exp.aes_cbl_tmx  exp.art_oem  exp.atm_amip_les_test  exp.atm_ape_test  exp.atm_cph_lam_20km  exp.atm_cph_nest_R2B4  (+94 more)
icon-model/support/: index_list.cu  index_list.h  index_list.hip.cc  mo_util_uuid.f90  mo_util_uuid_types.f90  util_multifile_restart.c  util_uuid.c  util_uuid.h
icon-model/utils/: cdo_set_date  days_in_year  filelock  get_climyear  icon_sorted_deps.sh  id++  move_to_prefix.sh  patch_namelist  pvcs.py  test_driver.py  timewarp
testcase/: ape_from_spinup_short.config  ape_from_spinup_short.date  ape_from_spinup_short.run
testcase/ape_from_spinup_short_restart_atm_19790701T000000Z.nc/: attributes.nc  patch1_0.nc
(+1953 files in other folders)
